Avoid game options bar overlapping game canvas

--- a/game/index.css
+++ b/game/index.css
@@ -65,6 +65,9 @@ body {
 }
 
 #entities-bar {
+  position: absolute;
+  top: 0;
+  z-index: 2;
   width: 100%;
   display: flex;
   justify-content: safe center;
